# clean-architeture-app

./: .gitignore  README.md  pyproject.toml
ca_app/: config.py  database.py  main.py  models.py  repository.py  schemas.py
tests/: conftest.py  test_api.py
